--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="col-sm-6 pt-3">
               <div class="container-fluid">
                 <h4>
-                  <alert>Schedule (TBA)</alert>
+                  <alert>Schedule</alert>
                 </h4>
                   <hr/>
                   
@@ -144,11 +144,11 @@
                             <th>Event</th>
                           </tr>
                         </thead>
-                        <!--tbody>
+                        <tbody>
                           <tr>
                             <td class="agenda-date" class="active" rowspan="9">
                               <div class="dayofmonth">
-                                23
+                                18
                               </div>
                               <div class="dayofweek">
                                 Tues
@@ -183,15 +183,14 @@
                             <td class="agenda-events">
                               <div class="agenda-event">
                                 <strong>Invited Talk</strong>
-                                <br />
-                                <a href="http://www.gchockler.com/">
-                                  Gregory Chockler
+                                <br/>
+                                <a href="">
+                                  TBA
                                 </a>
-                                (Royal Holloway)
-                                <br />
-                                Atomic Transaction Commit for Modern Data Stores
+                                <br/>
+                                TBA
                                 (
-                                <a href="abstracts.html#chockler">
+                                <a href="abstracts.html#tba">
                                 abstract
                               </a>
                               )
@@ -357,7 +356,7 @@
       </div>
     </td>
   </tr>
-</tbody-->
+</tbody>
 </table>
 </div>
 </div>
@@ -371,11 +370,11 @@
           <th>Event</th>
         </tr>
       </thead>
-      <!--tbody>
+      <tbody>
         <tr>
           <td class="agenda-date" class="active" rowspan="8">
             <div class="dayofmonth">
-              24
+              19
             </div>
             <div class="dayofweek">
               Wed
@@ -603,7 +602,7 @@ slides
 </div>
 </td>
 </tr>
-</tbody-->
+</tbody>
 </table>
 </div>
 </div>
