Pubs, Organisers and description at the top

--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
     <div class="mt-2">
   </div>
     <p>
-      This two-day workshop is aimed at bringing together researchers,
-      from the UK and elsewhere, who are working on the theory of concurrency
-      and the semantics and implementation of programming languages.
+      The South of England Regional Programming Language Seminar (<a href="https://srepls.github.io/">S-REPLS</a>) is a regular and informal meeting open to everyone with a professional interest — whether it be academic or commercial — in the semantics and implementation of programming languages. This year it will be joinly held with the Concurrency Workshop which aims to bring together researchers who are working on the theory of concurrency and related areas.
     </p>
     <!--p>
     <a class="anchor" name="venue">
@@ -439,7 +437,7 @@ Subscribe or Unsubscribe
       Brijesh Dongol
     </a>
     -->
-    <p>Marco Paviotti</p>
+    <p>Marco Paviotti and David Castro-Perez</p>
       <dt>Concurrency Workshop Steering Committee </dt>
       <dd>
         Mark Batty, Mike Dodds, Philippa Gardner, Cliff Jones and Matthew
@@ -587,6 +585,49 @@ Subscribe or Unsubscribe
           <li>
             <a href="https://www.thesunhotelcanterbury.co.uk/">
               The Sun Hotel
+            </a>
+          </li>
+        </ul>
+        </p>
+      </div>
+
+      <div class="container-fluid pt-4">
+        <h4>
+          <a class="anchor" name="Pubs and Restaurants">
+        </a>
+          Pubs and Restaurants
+        </h4>
+        <p>
+          For those who are planning to stay over, hang out after the workshop or visit Canterbury during the rest of the weekend, the (south european) organisers have crafted a list of recommended pubs and restaurants:
+        <ul>
+          <li>
+            <a href="">
+              Unicorn
+            </a>
+          </li>
+          <li>
+            <a href="Posillipo">
+              Posillipo (Italian)
+            </a>
+          </li>
+          <li>
+            <a href="">
+              Cafe Des Amis (Mexican)
+            </a>
+          </li>
+          <li>
+            <a href="">
+              Thomas Tallis
+            </a>
+          </li>
+          <li>
+            <a href="">
+              The Parrot
+            </a>
+          </li>
+          <li>
+            <a href="">
+              The Dolphin
             </a>
           </li>
         </ul>
