Registration not open yet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     </meta>
-    <title>Kent Concurrency Workshop and S-REPLS 15</title>
+    <title>Kent Concurrency Workshop and SREPLS 15</title>
     <link href="index_files/bootstrap.min.css" rel="stylesheet">
   </link>
   <link href="index_files/style.css" rel="stylesheet">
@@ -86,7 +86,7 @@
       </p>
         <p>
           Registration for the event is free. Lunch and tea/coffee will be
-          provided thanks to funding from the Lift Research Center at <a href="https://www.kent.ac.uk/">
+          provided thanks to funding from the LIFT Research Center (Languages for Innovation and Future Technologies) at <a href="https://www.kent.ac.uk/">
             University of Kent
           </a>
           and from
@@ -112,13 +112,13 @@
         </a>
           --->
           <a class="anchor" name="register">
-            <a class="btn btn-success" href="https://docs.google.com/forms/d/1FplIDgOW3zVjt9dbxWlrC1f4OfRXm20C7ERLJr20qUQ/" role="button">
+          <a class="btn btn-success"  role="button">
               Register
             </a>
           </a>
           <div class="col-xs-12" style="height:20px;">
         </div>
-        <strong>Registration deadline: 9th July.</strong>
+        <strong>Registration deadline: 9th July. (Not yet open)</strong>
         <br>
       </div>
       </div>
