links to our websites

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ Subscribe or Unsubscribe
       Brijesh Dongol
     </a>
     -->
-    <p>Marco Paviotti and David Castro-Perez</p>
+    <p><a href="https://mpaviotti.github.io">Marco Paviotti</a> and <a href="https://www.kent.ac.uk/computing/people/3664/castro-perez-david">David Castro-Perez</a></p>
       <dt>Concurrency Workshop Steering Committee </dt>
       <dd>
         Mark Batty, Mike Dodds, Philippa Gardner, Cliff Jones and Matthew
