--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     </a>
       The workshop will be held in
       <strong>LT2 Sibson Building</strong>
-        (see Campus Map). Directions to the Canterbury Campus are available
+        (see <a href="https://www.kent.ac.uk/maps/canterbury/canterbury-campus/building/sibson-building/siblt2">Campus Map</a>). 
+        Directions to the Canterbury Campus are available
         <a href="https://www.kent.ac.uk/locations/canterbury/directions">
           here
         </a>
@@ -96,7 +97,7 @@
           .
         </p>
         <div class="pt-2">
-          <a class="btn btn-warning" href="https://www.kent.ac.uk/maps/canterbury/canterbury-campus/building/sibson-building/sibson-atrium">
+          <a class="btn btn-warning" href="https://www.kent.ac.uk/maps/canterbury/canterbury-campus/building/sibson-building/siblt2">
             Campus Map
           </a>
           <!-- <a class="anchor" name="register">
