--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </a>
           --->
           <a class="anchor" name="register">
-          <a class="btn btn-success"  role="button">
+          <a class="btn btn-success" href="https://docs.google.com/forms/d/1FplIDgOW3zVjt9dbxWlrC1f4OfRXm20C7ERLJr20qUQ/edit" role="button">
               Register
             </a>
           </a>
@@ -429,8 +429,7 @@ Subscribe or Unsubscribe
 </div>
   <div class="container-fluid pt-4">
     <h4>
-      <a class="anchor" name="organisation">
-    </a>
+      <a class="anchor" name="organisation"></a>
       Organisation
     </h4>
     <!-- <a href="https://brijeshdongol.github.io/">
