--- a/index.html
+++ b/index.html
@@ -182,16 +182,12 @@
                               <div class="agenda-event">
                                 <strong>Invited Talk</strong>
                                 <br/>
-                                <a href="">
-                                  TBA
+                                <a href="https://www.imperial.ac.uk/people/n.wu">
+                                  Nicolas Wu
                                 </a>
+                                (Imperial College London)
                                 <br/>
-                                TBA
-                                (
-                                <a href="abstracts.html#tba">
-                                abstract
-                              </a>
-                              )
+                                Title and abstract: TBA
                             </div>
                           </td>
                         </tr>
@@ -316,8 +312,14 @@ TBA
           <td class="agenda-events">
             <div class="agenda-event">
               <strong>Invited Talk</strong>
-              <br />
-TBA
+                                <br/>
+                                <a href="https://www.imperial.ac.uk/people/n.wu">
+                                  Peter O'Hearn
+                                </a>
+                                 (University College London and Lacework)
+                                <br/>
+                                Title and Abstract: TBA
+
         </div>
       </td>
     </tr>
@@ -411,8 +413,27 @@ TBA
     <h4>
       <a class="anchor" name="announcements">
     </a>
-      Announcements
+      Call For Talks
     </h4>
+    Talks are typically 20 minutes long and should be given in person.
+    We invite proposals for talks on any topic related to programming languages theory and implementation.
+    We encourage submissions and contributions from both industry professionals and aspiring researchers
+    (postdocs and students).
+    <br><br>
+To submit a proposal for SREPLS, please contact <a href="mailto:m.paviotti@kent.ac.uk?subject=Talk Proposal for SREPLS">Marco Paviotti</a>. We encourage submissions touching on functional programming, semantics and category theory.
+
+<br><br>
+    To submit a talk for the Concurrency Workshop, please contact to <a href="mailto:D.Castro-Perez@kent.ac.uk?subject=Talk Proposal for CW">David Castro-Perez</a>. We encourage submissions [DAVID FILL THIS OUT  ]
+<br><br>
+    Please send a draft title and abstract by the end of
+<br><br>
+    <strong>Tue, 18th June 2024</strong>
+<br><br>
+    Complete the registration form by
+<br><br>
+    <strong>Tue, 9th July 2024</strong>
+    <br><br>
+
     Further announcements about the workshop will be made via the
     <a href="http://www.jiscmail.ac.uk/CONCURRENCYWG">
     Concurrency Working Group
@@ -598,6 +619,8 @@ Subscribe or Unsubscribe
           Pubs and Restaurants
         </h4>
         <p>
+          TBA
+          <!--
           For those who are planning to stay over, hang out after the workshop or visit Canterbury during the rest of the weekend, the (south european) organisers have crafted a list of recommended pubs and restaurants:
         <ul>
           <li>
@@ -630,7 +653,8 @@ Subscribe or Unsubscribe
               The Dolphin
             </a>
           </li>
-        </ul>
+        </ul> --
+            -->
         </p>
       </div>
       <div class="container-fluid pt-4">
