--- a/index.html
+++ b/index.html
@@ -415,12 +415,11 @@ TBA
     </a>
       Call For Talks
     </h4>
-    Talks are typically 20 minutes long and should be given in person.
-    We invite proposals for talks on any topic related to programming languages theory and implementation.
+    Talks are typically 20 minutes and should be given in person with 5 minutes questions.
     We encourage submissions and contributions from both industry professionals and aspiring researchers
     (postdocs and students).
     <br><br>
-To submit a proposal for SREPLS, please contact <a href="mailto:m.paviotti@kent.ac.uk?subject=Talk Proposal for SREPLS">Marco Paviotti</a>. We encourage submissions touching on functional programming, semantics and category theory.
+To submit a proposal for SREPLS, please contact <a href="mailto:m.paviotti@kent.ac.uk?subject=Talk Proposal for SREPLS">Marco Paviotti</a>. Submissions touching on functional programming, semantics and category theory particularly welcomed.
 
 <br><br>
     To submit a talk for the Concurrency Workshop, please contact to <a href="mailto:D.Castro-Perez@kent.ac.uk?subject=Talk Proposal for CW">David Castro-Perez</a>. We encourage submissions [DAVID FILL THIS OUT  ]
