--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ TBA
     We encourage submissions and contributions from both industry professionals and aspiring researchers
     (postdocs and students).
     <br><br>
-To submit a proposal for SREPLS, please contact <a href="mailto:m.paviotti@kent.ac.uk?subject=Talk Proposal for SREPLS">Marco Paviotti</a>. Submissions touching on functional programming, semantics and category theory particularly welcomed.
+To submit a proposal for SREPLS, please contact <a href="mailto:m.paviotti@kent.ac.uk?subject=Talk Proposal for SREPLS">Marco Paviotti</a>. Submissions touching on functional programming, semantics and category theory are particularly welcomed.
 
 <br><br>
     To submit a talk for the Concurrency Workshop, please contact to <a href="mailto:D.Castro-Perez@kent.ac.uk?subject=Talk Proposal for CW">David Castro-Perez</a>. We encourage submissions [DAVID FILL THIS OUT  ]
