--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
           </a>
           <div class="col-xs-12" style="height:20px;">
         </div>
-        <strong>Registration deadline: 9th July. (Not yet open)</strong>
+          Important dates:
+          <br>
+        <strong>Submission deadline: 18th June. </strong><br>
+        <strong>Registration deadline: 9th July. </strong>
         <br>
       </div>
       </div>
@@ -424,7 +427,7 @@ To submit a proposal for SREPLS, please contact <a href="mailto:m.paviotti@kent.
 <br><br>
     To submit a talk for the Concurrency Workshop, please contact to <a href="mailto:D.Castro-Perez@kent.ac.uk?subject=Talk Proposal for CW">David Castro-Perez</a>. We encourage submissions [DAVID FILL THIS OUT  ]
 <br><br>
-    Please send a draft title and abstract by the end of
+    Please send title and abstract by the end of
 <br><br>
     <strong>Tue, 18th June 2024</strong>
 <br><br>
