--- a/index.html
+++ b/index.html
@@ -664,11 +664,16 @@ Subscribe or Unsubscribe
           </div>
           <div class="col-sm">
             <img src="computing.png" alt="SCCS" height=100/>
-
           </div>
           <div class="col-sm">
             <img src="VETSS.png" alt="SCCS" height=90>
-                        </div>
+          </div>
+          <div class="col-sm">
+            <img src="plss.png" alt="SCCS" height=100/>
+          </div>
+          <div class="col-sm">
+            <img src="iccs.png" alt="SCCS" height=90>
+          </div>
           </img>
         </div>
       </div>
