--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 18
                               </div>
                               <div class="dayofweek">
-                                Tues
+                                Thu
                               </div>
                               <div class="shortdate text-muted">
                                 July
@@ -584,14 +584,8 @@ Subscribe or Unsubscribe
           Accommodation
         </h4>
         <p>
-          Participants can choose amongst a range of accomodations in nearby hotels. Please find a list of suggested accomodations below, however be mindful that these hotels might be high demand during the touristic and graduation season.<br><br>Alternatively we have a high number of reserved rooms in Keynes college within the university's
-          <a href="https://kenthospitality.kent.ac.uk/KxBnB/">
-          campus
-          </a> (promotion code: <strong>cc24</strong>).
-        <br><br>If you are based in London and choose to commute, Canterbury is just one hour away from London St Pancras International via the the highspeed train, and the university campus is a 35 minutes walk from Canterbury West Station.
-        <br/>
-        <br/>
-        Some possible hotel options are below. These are approx a 30-45 min walk to campus.
+          Participants can choose amongst a range of accomodations in nearby hotels. Please find a list of suggested accomodations below, however be mindful that these hotels might be in high demand during the touristic and graduation season.
+          These are approx a 30-45 min walk to campus.
         <ul>
           <li>
             <a href="https://www.abodecanterbury.co.uk/">
@@ -609,6 +603,13 @@ Subscribe or Unsubscribe
             </a>
           </li>
         </ul>
+        Alternatively we have a high number of reserved rooms in Keynes college within the university's
+          <a href="https://kenthospitality.kent.ac.uk/KxBnB/">
+          campus
+          </a> (promotion code: <strong>cc24</strong>).
+        <br><br>If you are based in London and choose to commute, Canterbury is just one hour away from London St Pancras International via the the highspeed train, and the university campus is a 35 minutes walk from Canterbury West Station.
+        <br/>
+        <br/>
         </p>
       </div>
 
