--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="mt-2">
   </div>
     <p>
-      The South of England Regional Programming Language Seminar (<a href="https://srepls.github.io/">S-REPLS</a>) is a regular and informal meeting open to everyone with a professional interest — whether it be academic or commercial — in the semantics and implementation of programming languages. This year it will be jointly held with the Concurrency Workshop which aims to bring together researchers who are working on the theory of concurrency and related areas.
+      The South of England Regional Programming Language Seminar (<a href="https://srepls.github.io/">S-REPLS</a>) is a regular and informal meeting open to everyone with a professional interest — whether it be academic or commercial — in the semantics and implementation of programming languages. This year it will be joinly held with the Concurrency Workshop which aims to bring together researchers who are working on the theory of concurrency and related areas.
     </p>
     <!--p>
     <a class="anchor" name="venue">
@@ -293,7 +293,7 @@ TBA
               19
             </div>
             <div class="dayofweek">
-              Wed
+              Fri
             </div>
             <div class="shortdate text-muted">
               July
@@ -670,8 +670,12 @@ Subscribe or Unsubscribe
             <img src="VETSS.png" alt="SCCS" height=90>
           </div>
           <div class="col-sm">
-            <a href="https://plas4sci.github.io/"><img src="https://plas4sci.github.io/plas4sci-logo.png" alt="SCCS" height=100/></a>
+            <img src="plss.png" alt="SCCS" height=100/>
           </div>
+          <div class="col-sm">
+            <img src="iccs.png" alt="SCCS" height=90>
+          </div>
+          </img>
         </div>
       </div>
     </div>
