--- a/index.html
+++ b/index.html
@@ -422,8 +422,7 @@ TBA
     We encourage submissions and contributions from both industry professionals and aspiring researchers
     (postdocs and students).
     <br><br>
-To submit a proposal for SREPLS, please contact <a href="mailto:m.paviotti@kent.ac.uk?subject=Talk Proposal for SREPLS">Marco Paviotti</a>.<br>
-    To submit a talk for the Concurrency Workshop, please contact to <a href="mailto:D.Castro-Perez@kent.ac.uk?subject=Talk Proposal for CW">David Castro-Perez</a>.
+Click <a href="mailto:m.paviotti@kent.ac.uk,D.Castro-Perez@kent.ac.uk?subject=Talk Proposal">here </a> to submit a proposal for SREPLS or the Concurrency Workshop.
 <br><br>
     Please send title and abstract by the end of
 <br><br>
