fixed logos, and submission via email.

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ TBA
     We encourage submissions and contributions from both industry professionals and aspiring researchers
     (postdocs and students).
     <br><br>
-Click <a href="mailto:m.paviotti@kent.ac.uk,D.Castro-Perez@kent.ac.uk?subject=Talk Proposal">here </a> to submit a proposal for SREPLS or the Concurrency Workshop.
+<u>Click <a href="mailto:m.paviotti@kent.ac.uk,D.Castro-Perez@kent.ac.uk?subject=Talk Proposal">here </a> to submit a proposal for SREPLS or the Concurrency Workshop.</u>
 <br><br>
     Please send title and abstract by the end of
 <br><br>
@@ -657,6 +657,7 @@ Subscribe or Unsubscribe
             -->
         </p>
       </div>
+
       <div class="container-fluid pt-4">
         <div class="row">
           <div class="col-sm">
@@ -669,12 +670,8 @@ Subscribe or Unsubscribe
             <img src="VETSS.png" alt="SCCS" height=90>
           </div>
           <div class="col-sm">
-            <img src="plss.png" alt="SCCS" height=100/>
+            <a href="https://plas4sci.github.io/"><img src="https://plas4sci.github.io/plas4sci-logo.png" alt="SCCS" height=100/></a>
           </div>
-          <div class="col-sm">
-            <img src="iccs.png" alt="SCCS" height=90>
-          </div>
-          </img>
         </div>
       </div>
     </div>
