--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="mt-2">
   </div>
     <p>
-      The South of England Regional Programming Language Seminar (<a href="https://srepls.github.io/">S-REPLS</a>) is a regular and informal meeting open to everyone with a professional interest — whether it be academic or commercial — in the semantics and implementation of programming languages. This year it will be joinly held with the Concurrency Workshop which aims to bring together researchers who are working on the theory of concurrency and related areas.
+      The South of England Regional Programming Language Seminar (<a href="https://srepls.github.io/">S-REPLS</a>) is a regular and informal meeting open to everyone with a professional interest — whether it be academic or commercial — in the semantics and implementation of programming languages. This year it will be jointly held with the Concurrency Workshop which aims to bring together researchers who are working on the theory of concurrency and related areas.
     </p>
     <!--p>
     <a class="anchor" name="venue">
