Talk deadline extended.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
           Important dates:
           <br>
-        <strong>Submission deadline: 18th June. </strong><br>
+        <strong>Submission deadline: 1st July. </strong><br>
         <strong>Registration deadline: 5th July. </strong>
         <br>
       </div>
