--- a/index.html
+++ b/index.html
@@ -321,8 +321,7 @@ TBA
                                 </a>
                                  (University College London and Lacework)
                                 <br/>
-                                Title and Abstract: TBA
-
+                                Program Analysis for the People (<a href="abstracts.html#ohearn">abstract</a>)
         </div>
       </td>
     </tr>
