--- a/abstracts.html
+++ b/abstracts.html
@@ -6,6 +6,183 @@
 <script src="index_files/jquery.js"></script> 
 <script src="index_files/bootstrap.min.js"></script>
 
-<h5 id="tba">TBA</h5>
-<p>TBA
+<h5 id="sigal">Jesse Sigal: Algebraic effects with parameters and their handlers</h5>
+<p>
+We present and report about early work-in-progress developing a library
+for algebraic effects and handlers with resumptions structured
+after Kripke possible-world semantics. The resulting abstraction
+can express dynamic allocation effects such as dynamically allocated
+full ground reference cells and handlers that manipulate these
+references as non-dangling references on a heap. We will demonstrate
+our implementation in Brady's dependently-typed Idris 2, and
+describe its future directions and prospects to advanced mutable-
+to-immutable data-structure transformation, dynamically allocated
+thread schedulers, functional-logic programming, and constraint
+solving.
+
+<br><br>
+Joint work with:
+  Ohad Kammar (University of Edinburgh)
+  Cristina Matache (University of Edinburgh)
+  Conor McBride (University of Strathclyde)
 </p>
+<br>
+
+<h5 id="yang">Zhixuan Yang: A Logical Framework for Locally Cartesian Closed Categories</h5>
+<p>
+Logical frameworks are type theories for studying type theories. This talk is
+about a logical framework that supports unrestricted higher-order abstract
+syntax and equational axioms. Although similar logical frameworks have already
+been used by several authors, the mathematical details of its categorical
+semantics remain unwritten folklore until recently, which I will sketch in this
+talk.
+</p>
+<br>
+
+<h5 id="arntzenius">Michael Arntzenius: Semantics for Nondeterministic Logic Programming via Mutually
+Exclusive Choice</h5>
+<p>
+In many domains it's natural to combine logical constraints with some
+notion of nondeterministic choice. For example, in procedural content
+generation for video games, we may wish a level map - say, a grid of
+tiles, each tile being either sea, shore, plains, or mountains - to be
+randomly generated, within some constraints - say, that sea tiles
+cannot be adjacent to plains or mountains. In this talk I'll present a
+syntax and semantics for "finite-choice logic programming", where
+rules can have multiple, mutually exclusive conclusions. This mutual
+exclusion is modelled by posets: elements of a poset are
+"incompatible" iff they have no upper bound (no way to combine their
+information); a poset is "bounded-complete" iff every compatible
+subset has a least upper bound (a _best_ way to combine their
+information). We can then construct a complete lattice on the
+pairwise-incompatible subsets ("mutually exclusive" subsets) of a
+bounded-complete poset. Our semantics forms a monotone map on this
+lattice, and its least fixed point finds the minimal models of our
+program.
+
+Moreover, although I probably will not have time to explain it in depth, there
+is a direct implementation strategy inspired by this denotational semantics.
+Based on joint work with Robert J. Simmons (unaffiliated) and Chris Martens
+(Northeastern University).
+</p>
+<br>
+
+<h5 id="ohearn">Peter O'Hearn: Program Analysis for the People</h5>
+<p>
+After many years happily working on research in mathematical logic and static
+analysis.  in 2013 I moved to Facebook to try to apply some of the ideas in the
+real world.  Eventually the techniques succeeded and led to thousands of bugs
+fixed before code at FB reached production, and the tools were used by other big
+tech companies including Microsoft and Amazon. But this was only after  the
+initial shock of a complete failure in deploying program analysis in the way I
+was I had learned to do in academia. Overall,  I received many intellectual
+gifts from  going back and forth between the theory and the needs of people who
+use the tools . The experience made me revisit my own assumptions, leading to
+surprising (for me) places. In the talk I’d like to tell you what I learned
+about logic and program analysis, and how it made a difference, as well as what
+I wish I knew and why there is much to do.
+</p>
+<br>
+<h5 id="watt">Conrad Watt: (TBA)</h5>
+<p>
+Compared to native platforms, the Web platform severely restricts the use of
+shared memory concurrency. For example: relaxed atomics are not supported,
+function pointers cannot be shared between threads, and certain synchronization
+primitives have limitations placed on their use.  Only two programming languages
+are permitted to run on the Web platform: JavaScript, a source-level scripting
+language; and WebAssembly, a bytecode-level compilation target. When a
+programmer directly writes JavaScript code, the Web platform's concurrency
+restrictions are immediately visible through limitations on the expressivity of
+available APIs related to threads and shared memory. In contrast, when a source
+language such as C++ or Rust is compiled to WebAssembly, the source language's
+concurrency features typically do not respect these limitations, and so the
+compilation process may fail in surprising ways, or silently insert onerous
+workarounds. This talk will recount the historical and technical background
+which has given rise to the Web platform's limitations on concurrency, highlight
+some of the more interesting workarounds involved in WebAssembly compilation,
+and sketch ongoing work in the Web standards community towards expanding the
+concurrency capabilities of the Web platform.
+</p>
+<br>
+
+
+<h5 id="gaeson">Luke Gaeson: Mix Testing: Specifying and Testing ABI Compatibility Of C/C++ Atomics Implementations</h5>
+<p>
+The correctness of complex software depends on both the correctness of the
+source code, and the compilers that generate corresponding binary code.
+Compilers must do more than preserve the semantics of a single source file: they
+must ensure that generated binaries can be composed with other binaries to form
+a final executable. The compatibility of composition is ensured using an
+Application Binary Interface (ABI), which specifies details of calling
+conventions, exception handling, and so on. Unfortunately, there are no official
+ABIs for concurrent programs, and different atomics mappings, although correct
+in isolation, may induce bugs when composed. Indeed, mixing binaries generated
+by today’s compilers can lead to erroneous binaries.  We present mix testing: a
+new technique designed to find compiler bugs when the components of a C/C++ test
+are separately-compiled for multiple compatible architectures and then mixed
+together. We define a class of compiler bugs, coined mixing bugs, that arise
+when parts of a program are compiled separately using different mappings from
+C/C++ atomic operations to assembly sequences. To demonstrate the generality of
+mix testing, we have designed and implemented tool, atomic-mixer, which we have
+used: (a) to reproduce existing non-mixing bugs that state-of-the-art
+concurrency testing tools are limited to being able to find (showing that
+atomic-mixer at least meets the capabilities of these tools), and (b) to find
+four previously-unknown mixing bugs in LLVM and GCC, and one prospective mixing
+bug in mappings proposed for the Java Virtual Machine. Lastly, we have worked
+with engineers at Arm to specify, for the first time, an atomics ABI for Armv8,
+and have used atomic-mixer to validate the LLVM and GCC compilers against it.
+</p>
+<br>
+
+
+<h5 id="hou">Ping Hou: Fearless Asynchronous Communications with Timed Multiparty Session Protocols</h5>
+<p>
+Session types using affinity and exception handling mechanisms have been
+developed to ensure the communication safety of protocols implemented in
+concurrent and distributed programming languages. Nevertheless, current affine
+session types are inadequate for specifying real-world asynchronous protocols,
+as they are usually imposed by time constraints which enable timeout exceptions
+to prevent indefinite blocking while awaiting valid messages. This paper
+proposes the first formal integration of affinity, time constraints, timeouts,
+and time-failure handling based on multiparty session types for supporting
+reliability in asynchronous distributed systems. With this theory, we statically
+guarantee that asynchronous timed communication is deadlock-free, communication
+safe, and will never be hindered by timeout errors or abrupt terminations.
+
+To implement our theory, we introduce Anon, a Rust toolchain designed to
+facilitate the implementation of safe affine timed protocols. Anon leverages
+generic types and the time library to handle timed communications, integrated
+with optional types for affinity. We evaluate our approach by extending diverse
+examples from the literature to incorporate time and timeouts, demonstrating
+that our solution incurs negligible overhead compared with an untimed
+implementation. We also showcase the correctness by construction of our approach
+by implementing various real-world use cases, including a remote data protocol
+from the Internet of Remote Things domain, and protocols from real-time systems
+like keyless car entry, Android motion sensors, and smartwatches.
+</p>
+<br>
+
+<h5 id="aksenov">Vitaly Aksenov: TBA</h5>
+<p>
+TBA
+</p>
+<br>
+
+
+<h5 id="ekici">Burak Ekici: Completeness of Asynchronous Session Tree Subtyping in Coq</h5>
+<p>
+In this talk, we present the first formalisation of asynchronous subtyping in
+multiparty session types (MPST) within the Coq proof assistant.  Our method
+involves transforming session types into session trees that exclude branching
+and selection, and then establishing a coinductive refinement  relation over
+these trees to govern action reordering and subtyping. We demonstrate the
+effectiveness of our formalisation by verifying example subtyping  schemas from
+the literature. Furthermore, we re-implement the inductive negation of the
+refinement relation from a previous work by Ghilezan et al.,  reducing the
+number of rules from eighteen to eight, and prove the completeness of subtyping
+with respect to its negation in Coq.
+
+This formalisation includes approximately 10K lines of Coq code, which can be
+accessed at: <a href ="https://github.com/ekiciburak/sessionTreeST/tree/itp2024">https://github.com/ekiciburak/sessionTreeST/tree/itp2024</a>.
+</p>
+<br>
