--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
     <div class="mt-2">
   </div>
     <p>
-      The South of England Regional Programming Language Seminar (<a href="https://srepls.github.io/">S-REPLS</a>) is a regular and informal meeting open to everyone with a professional interest — whether it be academic or commercial — in the semantics and implementation of programming languages. This year it will be jointly held with the Concurrency Workshop which aims to bring together researchers who are working on the theory of concurrency and related areas.
+      The South of England Regional Programming Language Seminar
+      (<a href="https://srepls.github.io/">S-REPLS</a>) is a regular and
+      informal meeting open to everyone with a professional interest — whether
+      it be academic or commercial — in the semantics and implementation of
+      programming languages. This year it will be jointly held with the
+      Concurrency Workshop which aims to bring together researchers who are
+      working on the theory of concurrency and related areas.
     </p>
     <!--p>
     <a class="anchor" name="venue">
@@ -214,9 +220,6 @@
                             <br />
                             <br />
                             TBA
-                          <br />
-                          <br />
-TBA
                       </div>
                     </td>
                   </tr>
@@ -417,7 +420,7 @@ TBA
     </a>
       Call For Talks
     </h4>
-    Talks are typically 20 minutes and should be given in person with 5 minutes questions.
+    Talks are typically 25 minutes and should be given in person with 5 minutes questions.
     We encourage submissions and contributions from both industry professionals and aspiring researchers
     (postdocs and students).
     <br><br>
