restructured the schedule. Updated the abstracts.

--- a/abstracts.html
+++ b/abstracts.html
@@ -28,10 +28,10 @@ thread schedulers, functional-logic programming, and constraint
 solving.
 
 <br><br>
-Joint work with:
-  Ohad Kammar (University of Edinburgh)
-  Cristina Matache (University of Edinburgh)
-  Conor McBride (University of Strathclyde)
+Joint work with:<br>
+  Ohad Kammar (University of Edinburgh)<br>
+  Cristina Matache (University of Edinburgh)<br>
+  Conor McBride (University of Strathclyde)<br>
 </p>
 <br>
 
@@ -90,7 +90,7 @@ about logic and program analysis, and how it made a difference, as well as what
 I wish I knew and why there is much to do.
 </p>
 <br>
-<h5 id="watt">Conrad Watt: (TBA)</h5>
+<h5 id="watt">Conrad Watt: Limitations of Concurrency on the Web</h5>
 <p>
 Compared to native platforms, the Web platform severely restricts the use of
 shared memory concurrency. For example: relaxed atomics are not supported,
@@ -169,9 +169,23 @@ like keyless car entry, Android motion sensors, and smartwatches.
 </p>
 <br>
 
-<h5 id="aksenov">Vitaly Aksenov: TBA</h5>
+<h5 id="aksenov">Vitaly Aksenov: Semi-automatic efficient granularity control</h5>
 <p>
-TBA
+Abstract: Over the past decade, many programming languages and systems for
+parallel-computing have been developed, e.g., Fork/Join and Habanero Java,
+Parallel Haskell, Parallel ML, and X10. Although these systems raise the level
+of abstraction for writing parallel codes, performance continues to require
+labor-intensive optimizations for coarsening the granularity of parallel
+executions. In this paper, we present provably and practically efficient
+techniques for controlling granularity within the run-time system of the
+language. Our starting point is "oracle-guided scheduling", a result from the
+functional-programming community that shows that granularity can be controlled
+by an "oracle" that can predict the execution time of parallel codes. We give an
+algorithm for implementing such an oracle and prove that it has the desired
+theoretical properties under the nested-parallel programming model. We implement
+the oracle in C++ by extending Cilk and evaluate its practical performance. The
+results show that our techniques can essentially eliminate hand tuning while
+closely matching the performance of hand tuned codes.
 </p>
 <br>
 
