--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                 </a>
                                 (Imperial College London)
                                 <br/>
-                                Title and abstract: TBA
+                                Title: TBA
                             </div>
                           </td>
                         </tr>
@@ -225,7 +225,7 @@
                   </tr>
                   <tr>
                     <td class="agenda-time">
-                      12:30 - 13:30
+                      12:30 - 14:00
                     </td>
                     <td class="agenda-events">
                       <div class="agenda-event">
@@ -235,7 +235,7 @@
                   </tr>
                   <tr>
                     <td class="agenda-time">
-                      13:30 - 15:00
+                      14:00 - 15:30
                     </td>
                     <td class="agenda-events">
                       <div class="agenda-event">
@@ -251,7 +251,7 @@ TBA
         </tr>
         <tr>
           <td class="agenda-time">
-            15:00 - 15:30
+            15:30 - 16:00
           </td>
           <td class="agenda-events">
             <div class="agenda-event">
@@ -261,7 +261,7 @@ TBA
         </tr>
           <tr>
             <td class="agenda-time">
-              15:30 - 17:00
+              16:00 - 17:00
             </td>
             <td class="agenda-events">
               <div class="agenda-event">
@@ -269,9 +269,7 @@ TBA
             <br />
             <br />
 TBA
-          <br/>
-          <br/>
-TBA
+  
       </div>
     </td>
   </tr>
@@ -324,7 +322,7 @@ TBA
                                 </a>
                                  (University College London and Lacework)
                                 <br/>
-                                Program Analysis for the People (<a href="abstracts.html#ohearn">abstract</a>)
+                                Title: Program Analysis for the People (<a href="abstracts.html#ohearn">abstract</a>)
         </div>
       </td>
     </tr>
@@ -353,7 +351,7 @@ TBA
 </tr>
 <tr>
   <td class="agenda-time">
-    12:30 - 13:30
+    12:30 - 14:00
   </td>
   <td class="agenda-events">
     <div class="agenda-event">
@@ -363,7 +361,7 @@ TBA
 </tr>
 <tr>
   <td class="agenda-time">
-    13:30 - 15:00
+    14:00 - 15:30
   </td>
   <td class="agenda-events">
 TBA
@@ -372,13 +370,12 @@ TBA
 TBA
 <br/>
 <br/>
-
 TBA
 </td>
 </tr>
 <tr>
   <td class="agenda-time">
-    15:00 - 15:30
+    15:30 - 16:00
   </td>
   <td class="agenda-events">
     <div class="agenda-event">
@@ -388,7 +385,7 @@ TBA
 </tr>
   <tr>
     <td class="agenda-time">
-      15:30 - 17:30
+      16:00 - 17:00
     </td>
     <td class="agenda-events">
       <div class="agenda-event">
@@ -397,13 +394,6 @@ TBA
       </p>
       <p>
         TBA
-      </p>
-      <p>
-        TBA
-      </p>
-      <p>
-        TBA
-      </p>
       </div>
 </td>
 </tr>
