--- a/abstracts.html
+++ b/abstracts.html
@@ -208,7 +208,7 @@ accessed at: <a href ="https://github.com/ekiciburak/sessionTreeST/tree/itp2024"
 </p>
 <br>
 
-<h5 id="marshal">Danielle Marshall:  Non-Linear Communication via Graded Modal Session Types</h5>
+<h5 id="marshall">Danielle Marshall:  Non-Linear Communication via Graded Modal Session Types</h5>
 <p>
 Session types provide guarantees about concurrent behaviour and can be
 understood through their correspondence with linear logic, with propositions as
@@ -227,5 +227,11 @@ programming language with linear, indexed, and graded modal types. We then
 define a core calculus capturing the requisite type features and our new graded
 modal session-typed primitives. We give an operational model and establish key
 properties following from the typing.
+</p>
+<br>
+
+<h5 id="jones">Cliff Jones:  TBA</h5>
+<p>
+TBA
 </p>
 <br>
