--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="col-sm-6 pt-3">
               <div class="container-fluid">
                 <h4>
-                  <alert>Schedule</alert>
+                  <alert>S-REPLS Schedule</alert>
                 </h4>
                   <hr/>
                   
@@ -277,6 +277,11 @@ TBA
 </table>
 </div>
 </div>
+
+                                  <h4>
+                  <alert>CW Schedule</alert>
+                </h4>
+
 <div class="agenda">
   <div class="table-responsive">
     <table class="table table-condensed table-bordered">
@@ -410,7 +415,7 @@ TBA
     </a>
       Call For Talks
     </h4>
-    Talks are typically 25 minutes and should be given in person with 5 minutes questions.
+    Talks are typically 20 minutes and should be given in person with 5 minutes questions.
     We encourage submissions and contributions from both industry professionals and aspiring researchers
     (postdocs and students).
     <br><br>
