--- a/abstracts.html
+++ b/abstracts.html
@@ -6,9 +6,11 @@
 <script src="index_files/jquery.js"></script> 
 <script src="index_files/bootstrap.min.js"></script>
 
-<h5 id="wu">Nicolas Wu: TBA</h5>
+<h5 id="wu">Nicolas Wu: Modular Effective Programs</h5>
 <p>
-  TBA
+An effect handler is a programming construct that allows you to define and manage side effects in a modular and controlled manner. They can capture effects such as state, exceptions, nondeterminism and many others. They promote a good separation of concerns and help with the maintainability and reuse of code.
+
+However, there is a catch: not every operation is algebraic, and so the methodology seems limited in its applications. In this talk, we outline recent work on a library for higher-order algebraic effects that lifts these restrictions. This provides an interface for working with monad transformers in a flexible and composable way.
 </p>
 <br>
 
