--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                 </a>
                                 (Imperial College London)
                                 <br/>
-                                Title: TBA (<a href="abstracts.html#wu">abstract</a>)
+                                Title: Modular Effective Programs (<a href="abstracts.html#wu">abstract</a>)
                             </div>
                           </td>
                         </tr>
